@@ -1,4 +1,5 @@
 1.15 -> 1.16:
+    - handle all callback traversals within a C switch (for extendability ease).
     - add popt.pc.
 
 1.14 -> 1.15:
